--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,4 +15,6 @@ jobs:
 
     - name: Install dependencies
       run: |
+        chmod +x requirements.txt
         pip install -r requirements.txt
+
