--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,6 +15,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        chmod +x requirements.txt
+        chmod +x ./requirements.txt
         pip install -r requirements.txt
+
 
