--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,7 +15,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        chmod +x ./requirements.txt
+        sudo chmod +x requirements.txt
         pip install -r requirements.txt
+
 
 
