--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -1,7 +1,8 @@
 name: CI
-
 on:
-  push:  
+  push: 
+permissions: 
+  contents: read
 
 jobs:
   build:
@@ -14,4 +15,4 @@ jobs:
         python-version: 3.11
 
     - name: Install dependencies
-      run: pip install -r .\requirements.txt
+      run: pip install -r requirements.txt
