--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,4 +15,6 @@ jobs:
         python-version: 3.11
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+            sudo chmod +x  requirements.txt
+            pip install -r requirements.txt
