--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,3 +15,15 @@ jobs:
 
     - name: Install dependencies
       run: pip install -r requirements.txt
+  
+  deploy:
+    needs: build
+    concurrency: 
+      group: production-deploy
+      cancel-in-progress: true
+    runs-on: ubuntu-latest
+    steps:
+    - name: Display Hello World
+      run: |
+            echo "Welcome to GitHub Actions" 
+            sleep 600s
