--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Display Hello World
+      timeout-minutes: 1
       run: |
             echo "Welcome to GitHub Actions" 
             sleep 300s
