--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -1,24 +1,55 @@
-# 
-name: Matrix configuration
-on: 
-  push: 
-  workflow_dispatch: 
+# # 
+# name: Matrix configuration
+# on: 
+#   push: 
+#   workflow_dispatch: 
+# jobs:
+#   deploy:
+#     strategy:
+#       max-parallel: 2
+#       matrix:
+#         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+#         images: [hello-world, alpine]
+#         exclude:
+#           - images: alpine
+#             os: windows-latest
+#         include:
+#           - images: amd64/alpine
+#             os: ubuntu-latest
+#     runs-on: ${{ matrix.os }}
+#     steps:
+#       - name: Docker Detail 
+#         run: docker info
+#       - name: Run image on
+#         run: docker run ${{ matrix.images }}
+name: Context testing
+on: push
+
 jobs:
-  deploy:
-    strategy:
-      max-parallel: 2
-      matrix:
-        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
-        images: [hello-world, alpine]
-        exclude:
-          - images: alpine
-            os: windows-latest
-        include:
-          - images: amd64/alpine
-            os: ubuntu-latest
-    runs-on: ${{ matrix.os }}
+  dump_contexts_to_log:
+    runs-on: ubuntu-latest
     steps:
-      - name: Docker Detail 
-        run: docker info
-      - name: Run image on
-        run: docker run ${{ matrix.images }}
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Dump job context
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+        run: echo "$STEPS_CONTEXT"
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJson(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+      - name: Dump strategy context
+        env:
+          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+        run: echo "$STRATEGY_CONTEXT"
+      - name: Dump matrix context
+        env:
+          MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        run: echo "$MATRIX_CONTEXT"
