--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -74,4 +74,4 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Welcome message
-        run: echo "######## Welcome to Github Action ############"
+        run: echo 'Welcome to Github Action'
